# fuze-prod

./: changelog-config.json  main.py  pyproject.toml
.github/workflows/: zip-and-release.yml
lab1/: car.ipynb
lab2/: main.py
microwave/: gui.py  oven.ipynb  oven.py
