[project]
name = "fuzzy"
version = "0.1.0"
description = "fuzzy logic stuff for lab 1, 2, and appliance fuzzy controller"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "scikit-fuzzy>=0.5.0",
    "scipy>=1.15.3",
    "streamlit>=1.46.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
